[project]
name = "swe-foundations-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[tool.uv.workspace]
members = [
    "concurrent_programming",
]
